force-app/main/default/objects/User/fields/AV_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>AV_ExternalID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AV ID Externo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>