force-app/main/default/objects/User/fields/AV_Funcion__c.field-meta.xml
<CustomField>
    <fullName>AV_Funcion__c</fullName>
    <label>Función</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>DT</fullName>
            </value>
            <value>
                <fullName>DAN</fullName>
            </value>
            <value>
                <fullName>Oficina</fullName>
            </value>
            <value>
                <fullName>SSCC</fullName>
            </value>
            <value>
                <fullName>Gestor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>