force-app/main/default/objects/User/fields/AV_NotGrantPermissionSet__c.field-meta.xml
<CustomField>
    <fullName>AV_NotGrantPermissionSet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cuando esté el check marcado no se lanzará el método permissionUser del trigger de User.</description>
    <label>No añadir permission set</label>
    <type>Checkbox</type>
</CustomField>