force-app/main/default/objects/User/fields/AV_NumeroOficinaEmpresa__c.field-meta.xml
<CustomField>
    <fullName>AV_NumeroOficinaEmpresa__c</fullName>
    <description>Oficina a la que pertenece el usuario</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Número oficina empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>