force-app/main/default/objects/User/fields/AV_OriginalOfficeNumber__c.field-meta.xml
<CustomField>
    <fullName>AV_OriginalOfficeNumber__c</fullName>
    <description>Used in AV_LoginFlow to store the original value of AV_NumeroOficinaEmpresa__c of this user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Numero oficina empresa original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>