force-app/main/default/objects/User/fields/AV_ProfileName__c.field-meta.xml
<CustomField>
    <fullName>AV_ProfileName__c</fullName>
    <formula>Profile.Name</formula>
    <label>Profile Name</label>
    <type>Text</type>
</CustomField>