force-app/main/default/objects/User/fields/AV_tipoGestor__c.field-meta.xml
<CustomField>
    <fullName>AV_tipoGestor__c</fullName>
    <description>Campo que identifica el usuario como TGA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo Gestor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>