force-app/main/default/objects/User/fields/CC_Cambio_de_Estado_OmniChannel__c.field-meta.xml
<CustomField>
    <fullName>CC_Cambio_de_Estado_OmniChannel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cambio de Estado OmniChannel</label>
    <type>DateTime</type>
</CustomField>