force-app/main/default/objects/User/fields/CC_Capacidad__c.field-meta.xml
<CustomField>
    <fullName>CC_Capacidad__c</fullName>
    <label>Capacidad</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>