force-app/main/default/objects/User/fields/CC_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>CC_Proveedor__c</fullName>
    <label>Proveedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AOS</fullName>
            </value>
            <value>
                <fullName>CAIXABANK</fullName>
            </value>
            <value>
                <fullName>COMDATA</fullName>
            </value>
            <value>
                <fullName>COPS</fullName>
            </value>
            <value>
                <fullName>DIGITAL</fullName>
            </value>
            <value>
                <fullName>DXC</fullName>
            </value>
            <value>
                <fullName>EVERIS</fullName>
            </value>
            <value>
                <fullName>INDRA</fullName>
            </value>
            <value>
                <fullName>MST</fullName>
            </value>
            <value>
                <fullName>PAYMENTS</fullName>
            </value>
            <value>
                <fullName>PROMOCAIXA</fullName>
            </value>
            <value>
                <fullName>SILK</fullName>
            </value>
            <value>
                <fullName>ASSET MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>ITNOW</fullName>
            </value>
            <value>
                <fullName>BIP</fullName>
            </value>
            <value>
                <fullName>WELAB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>