force-app/main/default/objects/User/fields/CIBE_FuncionEmpleado__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FuncionEmpleado__c</fullName>
    <description>Función del usuario empleado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Funcion Empleado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>