force-app/main/default/objects/User/fields/CIBE_RoleName__c.field-meta.xml
<CustomField>
    <fullName>CIBE_RoleName__c</fullName>
    <formula>UserRole.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Name</label>
    <type>Text</type>
</CustomField>