force-app/main/default/objects/User/fields/CSBD_UsuarioPromptsIA__c.field-meta.xml
<CustomField>
    <fullName>CSBD_UsuarioPromptsIA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para determinar si el usuario puede acceder a los prompts.
Solo lo tendrán activo los que tengan el usuario configurado para poder utilizar prompts.</description>
    <label>Usuario Prompts IA</label>
    <type>Checkbox</type>
</CustomField>