force-app/main/default/objects/User/fields/OS_Agente_Backup__c.field-meta.xml
<CustomField>
    <fullName>OS_Agente_Backup__c</fullName>
    <label>Agente Backup</label>
    <relationshipName>Name</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>