force-app/main/default/objects/User/fields/OS_Cola_Backup__c.field-meta.xml
<CustomField>
    <fullName>OS_Cola_Backup__c</fullName>
    <label>Cola Backup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2N CCI Holabank</fullName>
            </value>
            <value>
                <fullName>2N CNF INDRA</fullName>
            </value>
            <value>
                <fullName>2N CREDITO STOCK</fullName>
            </value>
            <value>
                <fullName>2N GGCC FAG</fullName>
            </value>
            <value>
                <fullName>2N GGCC FAG ACCENTURE</fullName>
            </value>
            <value>
                <fullName>2N SINDICADOS FAG</fullName>
            </value>
            <value>
                <fullName>2N SINDICADOS FAG ACCENTURE</fullName>
            </value>
            <value>
                <fullName>2N SINDICADOS FAG INDRA</fullName>
            </value>
            <value>
                <fullName>2N SINDICADOS FAG PNA</fullName>
            </value>
            <value>
                <fullName>2N UAFE CEF</fullName>
            </value>
            <value>
                <fullName>2N UAFE CNF</fullName>
            </value>
            <value>
                <fullName>2N UAFE CNF PNA</fullName>
            </value>
            <value>
                <fullName>2N UAFE FAG ACCENTURE</fullName>
            </value>
            <value>
                <fullName>2N UAFE FAG INDRA</fullName>
            </value>
            <value>
                <fullName>2N UAFE FAG PNA</fullName>
            </value>
            <value>
                <fullName>3N CCI Holabank</fullName>
            </value>
            <value>
                <fullName>3N CREDITO STOCK</fullName>
            </value>
            <value>
                <fullName>3N UAFE CEF</fullName>
            </value>
            <value>
                <fullName>3N UAFE FAG</fullName>
            </value>
            <value>
                <fullName>Avales Internacionales Accenture</fullName>
            </value>
            <value>
                <fullName>Avales Internacionales COPS</fullName>
            </value>
            <value>
                <fullName>Avales Internacionales Indra</fullName>
            </value>
            <value>
                <fullName>BAJA_3N UAFE EXF</fullName>
            </value>
            <value>
                <fullName>Buzón Comercio Exterior</fullName>
            </value>
            <value>
                <fullName>Buzón Contact Center International</fullName>
            </value>
            <value>
                <fullName>Buzón Export Online</fullName>
            </value>
            <value>
                <fullName>Buzón International Support</fullName>
            </value>
            <value>
                <fullName>Buzón KYC Renewal</fullName>
            </value>
            <value>
                <fullName>Buzón Service Desk</fullName>
            </value>
            <value>
                <fullName>Buzón Valija digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>