force-app/main/default/objects/User/fields/OS_Fin_Vigencia_Agente_Backup__c.field-meta.xml
<CustomField>
    <fullName>OS_Fin_Vigencia_Agente_Backup__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fin Vigencia Backup</label>
    <type>DateTime</type>
</CustomField>