force-app/main/default/objects/User/fields/SAC_GruposPerteneciente__c.field-meta.xml
<CustomField>
    <fullName>SAC_GruposPerteneciente__c</fullName>
    <description>Grupos a los que pertenece el usuario dentro del proyecto SAC Reclamaciones</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Grupos Perteneciente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>