force-app/main/default/objects/User/fields/SAC_PerteneceCOPSAJ__c.field-meta.xml
<CustomField>
    <fullName>SAC_PerteneceCOPSAJ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para guardar si el usuario pertenece a un grupo de COPS o AJ.</description>
    <label>Pertenece a COPS/AJ</label>
    <type>Checkbox</type>
</CustomField>