force-app/main/default/objects/User/fields/SEG_Centro__c.field-meta.xml
<CustomField>
    <fullName>SEG_Centro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Centro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>