force-app/main/default/objects/User/fields/SEG_MyUser__c.field-meta.xml
<CustomField>
    <fullName>SEG_MyUser__c</fullName>
    <formula>IF( Id = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyUser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>