force-app/main/default/objects/User/fields/SEG_NombreFirmas__c.field-meta.xml
<CustomField>
    <fullName>SEG_NombreFirmas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre en firmas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>