force-app/main/default/objects/User/fields/SEG_Organizaci_n__c.field-meta.xml
<CustomField>
    <fullName>SEG_Organizaci_n__c</fullName>
    <label>Organización</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SEG_Organizacion_Segmentos</valueSetName>
    </valueSet>
</CustomField>