force-app/main/default/objects/User/fields/SEG_Tipo_usuario_SEG__c.field-meta.xml
<CustomField>
    <fullName>SEG_Tipo_usuario_SEG__c</fullName>
    <description>Tipo de usuario a nivel de Segmentos</description>
    <label>Tipo usuario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BO</fullName>
            </value>
            <value>
                <fullName>CSO</fullName>
            </value>
            <value>
                <fullName>Firmas</fullName>
                <isActive>false</isActive>
                <label>Firmas</label>
            </value>
            <value>
                <fullName>MCC</fullName>
                <isActive>false</isActive>
                <label>MCC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>