force-app/main/default/objects/User/fields/SEG_TipousuarioBO__c.field-meta.xml
<CustomField>
    <fullName>SEG_TipousuarioBO__c</fullName>
    <label>Tipo usuario BO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>FFEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>