force-app/main/default/objects/User/fields/SEG_TipousuarioCSO__c.field-meta.xml
<CustomField>
    <fullName>SEG_TipousuarioCSO__c</fullName>
    <label>Tipo usuario CSO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Firmas</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>MCC</fullName>
            </value>
            <value>
                <fullName>FFEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>