force-app/main/default/objects/User/validationRules/AliasName.validationRule-meta.xml
<ValidationRule>
    <fullName>AliasName</fullName>
    <active>true</active>
    <description>Bloqueo para la modificación del Alias Name por usuarios nos Admin</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator Restrict IP&quot;,
$Profile.Name &lt;&gt; &quot;API Only&quot;,
NOT($Permission.CC_Modificar_Alias_Usuario),
ISCHANGED(Alias)
)</errorConditionFormula>
    <errorDisplayField>Alias</errorDisplayField>
    <errorMessage>No tiene autorización para cambiar este campo</errorMessage>
</ValidationRule>