force-app/main/default/objects/User/listViews/Analista_y_2_nivel.listView-meta.xml
<ListView>
    <fullName>Analista_y_2_nivel</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>LIVEAGENT_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>startsWith</operation>
        <value>CC_Analísta y 2º nivel</value>
    </filters>
    <label>Analista y 2º nivel</label>
    <language>en_US</language>
</ListView>