force-app/main/default/objects/User/listViews/AV_Usuario_CaixaBank.listView-meta.xml
<ListView>
    <fullName>AV_Usuario_CaixaBank</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>AV_Funcion__c</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>EMPLOYEE_NUMBER</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>AV_Usuario_CaixaBank</value>
    </filters>
    <filters>
        <field>AV_Funcion__c</field>
        <operation>equals</operation>
        <value>Oficina</value>
    </filters>
    <label>AV_Usuario_CaixaBank_con_Funcion_Oficina</label>
    <language>en_US</language>
</ListView>