force-app/main/default/objects/User/listViews/B_squeda_username.listView-meta.xml
<ListView>
    <fullName>B_squeda_username</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>EMPLOYEE_NUMBER</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>prepremium.priorizar@caixabankops.com</value>
    </filters>
    <label>Búsqueda username</label>
    <language>en_US</language>
</ListView>