force-app/main/default/objects/User/listViews/CC_Clientes.listView-meta.xml
<ListView>
    <fullName>CC_Clientes</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>CC_Usuario_CaixaBank</value>
    </filters>
    <label>CC Clientes</label>
</ListView>