force-app/main/default/objects/User/listViews/CC_Empleados.listView-meta.xml
<ListView>
    <fullName>CC_Empleados</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>CC_Usuario_CaixaBank_Empleados</value>
    </filters>
    <label>CC Empleados</label>
</ListView>