force-app/main/default/objects/User/listViews/Creados_hoy.listView-meta.xml
<ListView>
    <fullName>Creados_hoy</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>EMPLOYEE_NUMBER</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>AV_ExternalID__c</columns>
    <columns>AV_Funcion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Creados hoy</label>
    <language>en_US</language>
</ListView>